Bug 824266 Crash in account manager when account has invalid server @ nsMsgAccountManager::GetIdentitiesForServer. Put back null check that was mistakenly taken out in bug 820377. r=rkent